@@ -16,6 +16,7 @@ from collective.documentgenerator.content.vocabulary import PortalTypesVocabular
 from collective.iconifiedcategory.vocabularies import CategoryTitleVocabulary
 from collective.iconifiedcategory.vocabularies import CategoryVocabulary
 from eea.facetednavigation.interfaces import IFacetedNavigable
+from ftw.labels.interfaces import ILabelJar
 from imio.annex.content.annex import IAnnex
 from imio.dashboard.content.dashboardcollection import IDashboardCollection
 from imio.dashboard.vocabulary import ConditionAwareCollectionVocabulary
@@ -958,3 +959,29 @@ class PMCategoryVocabulary(CategoryVocabulary):
 
 class PMCategoryTitleVocabulary(CategoryTitleVocabulary, PMCategoryVocabulary):
     """Override to use same _get_categories as PMCategoryVocabulary."""
+
+
+class FTWLabelsVocabulary(object):
+    """
+    Vocabulary that lists available ftw.labels labels for the current MeetingConfig.
+    """
+    implements(IVocabularyFactory)
+
+    def __call__(self, context):
+        tool = api.portal.get_tool('portal_plonemeeting')
+        cfg = tool.getMeetingConfig(context)
+        res = []
+        # do not fail when displaying the schema in the dexterity types control panel
+        if not cfg:
+            return SimpleVocabulary(res)
+
+        labels = ILabelJar(cfg)
+
+        for label in labels:
+            res.append(SimpleTerm(
+                label['label_id'],
+                label['label_id'],
+                label['title']))
+        return SimpleVocabulary(res)
+
+FTWLabelsVocabularyFactory = FTWLabelsVocabulary()
